--- a/live-huanghe-oauth/pom.xml
+++ b/live-huanghe-oauth/pom.xml
@@ -39,7 +39,10 @@
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.5.RELEASE</version>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
         <!--jwt-->
         <dependency>
             <groupId>org.springframework.security</groupId>
