密码模式,凭证模式,可用.

--- a/live-huanghe-oauth/src/main/resources/application.yml
+++ b/live-huanghe-oauth/src/main/resources/application.yml
@@ -19,3 +19,6 @@ eureka:
     serviceUrl:
       defaultZone: http://127.0.0.1:9000/eureka/
     registry-fetch-interval-seconds: 10
+logging:
+  level:
+    org.springframework.security: info
