--- a/live-huanghe-user/pom.xml
+++ b/live-huanghe-user/pom.xml
@@ -12,7 +12,21 @@
     <artifactId>live-huanghe-user</artifactId>
 
     <dependencies>
+        <!--        安全认证access_token-->
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.5.RELEASE</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!--    自己的依赖    -->
         <dependency>
             <groupId>www.huanghe.live</groupId>
