--- a/live-huanghe-user/src/main/resources/application.yml
+++ b/live-huanghe-user/src/main/resources/application.yml
@@ -36,3 +36,14 @@ mybatis:
 jackson:
   date-format:  HH:mm:ss
   time-zone: GMT+0
+auth-server-url: http://localhost:9002 # 授权服务地址
+security:
+  oauth2:
+    client:
+      client-id: client1
+      client-secret: 123456
+      scope: test
+      access-token-uri: ${auth-server-url}/oauth/token
+      user-authorization-uri: ${auth-server-url}/oauth/authorize
+    resource:
+      token-info-uri: ${auth-server-url}/oauth/check_token #检查令牌
