--- a/live-huanghe-user/src/main/resources/application.yml
+++ b/live-huanghe-user/src/main/resources/application.yml
@@ -13,18 +13,18 @@ eureka:
     service-url:
       defaultZone: http://127.0.0.1:9000/eureka/
       registry-fetch-interval-seconds: 10
-redis:
-  pool:
-    host: 47.100.28.233
-    port: 7000
-    password: mfoyouredis-1
-    timeout: 5000 # 连接超时时间（毫秒）
-    max-active: 200 # 连接池最大连接数（使用负值表示没有限制）
-    config:
-      minIdle: 1
-      maxIdle: 100
-      maxTotal: 1000
-      maxWaitMillis: 100000
+#redis:
+#  pool:
+#    host: 47.100.28.233
+#    port: 7000
+#    password: mfoyouredis-1
+#    timeout: 5000 # 连接超时时间（毫秒）
+#    max-active: 200 # 连接池最大连接数（使用负值表示没有限制）
+#    config:
+#      minIdle: 1
+#      maxIdle: 100
+#      maxTotal: 1000
+#      maxWaitMillis: 100000
 
 # 该配置节点为独立的节点
 mybatis:
@@ -42,8 +42,12 @@ security:
     client:
       client-id: client1
       client-secret: 123456
-      scope: test
+      scope: all
       access-token-uri: ${auth-server-url}/oauth/token
       user-authorization-uri: ${auth-server-url}/oauth/authorize
     resource:
       token-info-uri: ${auth-server-url}/oauth/check_token #检查令牌
+
+logging:
+  level:
+    org.springframework.security: debug
