改为jwt 模式的验证.更加方便.不用每次都请求 认证服务器

--- a/live-huanghe-user/pom.xml
+++ b/live-huanghe-user/pom.xml
@@ -79,7 +79,12 @@
             <version>2.2.0.RELEASE</version>
             <scope>compile</scope>
         </dependency>
-
+        <!--jwt-->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+            <version>1.0.9.RELEASE</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
