--- a/live-huanghe-user/pom.xml
+++ b/live-huanghe-user/pom.xml
@@ -80,6 +80,14 @@
             <scope>compile</scope>
         </dependency>
 
+
+
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
