--- a/live-huanghe-user/pom.xml
+++ b/live-huanghe-user/pom.xml
@@ -49,14 +49,22 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!--独立依赖-->
+<!-- websocket驱动 -->
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.3.4.RELEASE</version>
+        </dependency>
 
 
+        <!--   数据库驱动     -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.47</version>
         </dependency>
-
+<!--lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -78,14 +86,6 @@
             <artifactId>spring-cloud-openfeign-core</artifactId>
             <version>2.2.0.RELEASE</version>
             <scope>compile</scope>
-        </dependency>
-
-
-
-        <dependency>
-            <groupId>org.java-websocket</groupId>
-            <artifactId>Java-WebSocket</artifactId>
-            <version>1.5.1</version>
         </dependency>
 
     </dependencies>
