--- a/live-huanghe-user/src/main/resources/application.yml
+++ b/live-huanghe-user/src/main/resources/application.yml
@@ -4,10 +4,22 @@ spring:
   application:
     name: user-server
   datasource:
+    type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/live.huanghe.blog
     username: root
     password: root
+#    Hikari连接池
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 15
+      auto-commit: true
+      idle-timeout: 30000
+      pool-name: HikariPool
+      max-lifetime: 180000000
+      connection-timeout: 30000
+      connection-test-query: select 1
+
 eureka:
   client:
     service-url:
@@ -36,7 +48,8 @@ mybatis:
 jackson:
   date-format:  HH:mm:ss
   time-zone: GMT+0
-auth-server-url: http://localhost:9002 # 授权服务地址
+  # 授权服务地址
+auth-server-url: http://localhost:9002
 security:
   oauth2:
     client:
@@ -50,4 +63,4 @@ security:
 
 logging:
   level:
-    org.springframework.security: debug
+    org.springframework.security: info
